--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-taskapp-localstorage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fredsalv01.github.io/react-taskapp/",
+  "homepage": "https://fredsalv01.github.io/react-localstorage-todo/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
